<resources>
    <string name="app_name">自动售药机</string>

    <string name="connect_error">网络未连接</string>

    <string name="shopping">购物</string>
    <string name="demo">演示</string>
    <string name="qr_code">取货码</string>
    <string name="activity">活动</string>

    <string name="company">山东潍坊至睿广告传媒有限公司</string>
    <string name="numble">ZR-vending</string>
    <string name="phone">027-234234</string>
    <string name="map">地图</string>

    <string name="scan_attention">扫码关注</string>
    <string name="all_drug">全部药品</string>
    <string name="recommen_ad">推荐位</string>

    <string name="zfb_pay">支付宝支付</string>
    <string name="weixin_pay">微信支付</string>
    <string name="union_pay">银联支付</string>

    <string name="del">删除</string>
    <string name="confirm">确定</string>
    <string name="input_code">请输入6位取货码</string>

    <string name="back">返回</string>
    <string name="member">会员购买</string>
    <string name="store_num">库存:</string>
    <string name="buy_num">购买数量:</string>
    <string name="total">合计:</string>
    <string name="zfb">支付宝</string>
    <string name="weixin">微信</string>
    <string name="union">银联</string>
    <string name="drug_intro">药品简介及注意事项</string>

    <string name="sell_out">已售罄</string>
    <string name="mngr_login">管理员登录</string>
    <string name="input_usr_name">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="cancel">取消</string>

    <string name="settings">设置</string>
    <string name="modify_pathway_count">修改货道数量</string>
    <string name="newest_order">最近订单查看</string>
    <string name="test_pathwar">测试出货轨道</string>
    <string name="clear_local_file">清空广告和视频文件</string>
    <string name="volumn_control">音量调节</string>
    <string name="set_ip">设置查看IP地址</string>
    <string name="check_temp_state">查看机器温度状态</string>
    <string name="sensor_state_report">机器传感器状态汇总报告</string>
    <string name="close">关闭</string>

    <string name="pathway_num">货道号</string>
    <string name="drug_name">药品名称</string>
    <string name="count">数量</string>
    <string name="one_key">一键补货</string>
    <string name="out_normal">出货正常</string>
    <string name="out_except">出货异常</string>
    <string name="report">上报后台</string>
    <string name="auto_ip">自动获取</string>
    <string name="manual_ip">手动设置</string>
    <string name="ip_address">IP地址:</string>
    <string name="netmask">子网掩码:</string>
    <string name="gateway">网关:</string>
    <string name="dns1">DNS1:</string>
    <string name="dns2">DNS2:</string>

    <!-- error -->
    <string name="error_please_check_network">请检查网络。</string>
    <string name="error_timeout">请求超时，网络不好或者服务器不稳定。</string>
    <string name="error_not_found_server">未发现指定服务器，清切换网络后重试。</string>
    <string name="error_url_error">URL错误。</string>
    <string name="error_not_found_cache">没有找到缓存.</string>
    <string name="error_unknow">未知错误。</string>
    <string name="error_response_code">服务器响应码%1$d</string>
    <string name="error_response_code_dex">服务器响应码%1$d，如果你们服务器在这种情况下也返回数据你可以处理。</string>
    <string name="wait_dialog_title">正在请求，请稍后…</string>
</resources>
