<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.adrian.automat.activities.SetIPActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp70"
        android:gravity="center"
        android:text="@string/set_ip"
        android:textColor="@color/normal"
        android:textSize="@dimen/font_large" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        android:background="@color/normal" />

    <RadioGroup
        android:id="@+id/rg_ip_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp400"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_auto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp200"
            android:layout_weight="1.0"
            android:text="@string/auto_ip"
            android:textColor="@color/normal"
            android:textSize="@dimen/font_normal" />

        <RadioButton
            android:id="@+id/rb_manual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/manual_ip"
            android:textColor="@color/normal"
            android:textSize="@dimen/font_normal" />
    </RadioGroup>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/normal" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp100"
                android:layout_marginRight="@dimen/dp500"
                android:text="@string/ip_address"
                android:textColor="@color/normal"
                android:textSize="@dimen/font_normal" />

            <EditText
                android:id="@+id/et_ip_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="192.168.0.122"
                android:textColor="@color/normal"
                android:textSize="@dimen/font_normal" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/normal" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp100"
                android:layout_marginRight="@dimen/dp500"
                android:text="@string/netmask"
                android:textColor="@color/normal"
                android:textSize="@dimen/font_normal" />

            <EditText
                android:id="@+id/et_netmask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="192.168.0.123"
                android:textColor="@color/normal"
                android:textSize="@dimen/font_normal" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/normal" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp100"
                android:layout_marginRight="@dimen/dp500"
                android:text="@string/gateway"
                android:textColor="@color/normal"
                android:textSize="@dimen/font_normal" />

            <EditText
                android:id="@+id/et_gateway"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="192.168.0.132"
                android:textColor="@color/normal"
                android:textSize="@dimen/font_normal" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/normal" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp100"
                android:layout_marginRight="@dimen/dp500"
                android:text="@string/dns1"
                android:textColor="@color/normal"
                android:textSize="@dimen/font_normal" />

            <EditText
                android:id="@+id/et_dns1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="192.168.0.132"
                android:textColor="@color/normal"
                android:textSize="@dimen/font_normal" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/normal" />

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp100"
                android:layout_marginRight="@dimen/dp500"
                android:text="@string/dns2"
                android:textColor="@color/normal"
                android:textSize="@dimen/font_normal" />

            <EditText
                android:id="@+id/et_dns2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="192.168.0.132"
                android:textColor="@color/normal"
                android:textSize="@dimen/font_normal" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/normal" />
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginRight="@dimen/dp100"
            android:background="@drawable/btn_fillet_bg_selector"
            android:textSize="@dimen/font_normal"
            android:textColor="@drawable/btn_font_selector"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:background="@drawable/btn_fillet_bg_selector"
            android:textSize="@dimen/font_normal"
            android:textColor="@drawable/btn_font_selector"
            android:text="@string/confirm" />
    </LinearLayout>
</LinearLayout>
